stopping overflow

--- a/src/styles/jove.css
+++ b/src/styles/jove.css
@@ -1,4 +1,5 @@
 body{
     background: linear-gradient(to right, rgb(11, 245, 11),rgba(11, 245, 11, 0.644), rgba(11, 245, 11, 0.486));
     /* background-color: red; */
+    overflow: hidden;
 }
